@@ -16,10 +16,10 @@ module Spec
       end
 
       def failure_message_for_should
-        message =  "expected collection contained:  #{safely_sort(@expected).inspect}\n"
-        message += "actual collection contained:    #{safely_sort(@actual).inspect}\n"
-        message += "the missing elements were:      #{safely_sort(@missing_items).inspect}\n" unless @missing_items.empty?
-        message += "the extra elements were:        #{safely_sort(@extra_items).inspect}\n" unless @extra_items.empty?
+        message =  "expected collection contained:  #{safe_sort(@expected).inspect}\n"
+        message += "actual collection contained:    #{safe_sort(@actual).inspect}\n"
+        message += "the missing elements were:      #{safe_sort(@missing_items).inspect}\n" unless @missing_items.empty?
+        message += "the extra elements were:        #{safe_sort(@extra_items).inspect}\n"   unless @extra_items.empty?
         message
       end
       
@@ -33,7 +33,7 @@ module Spec
 
       private
 
-        def safely_sort(array)
+        def safe_sort(array)
           array.all?{|item| item.respond_to?(:<=>)} ? array.sort : array
         end
 
